--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,19 @@ jobs:
 
     test:
         runs-on: ubuntu-latest
+        services:
+        postgres:
+            image: postgres
+            env:
+                POSTGRES_DB: dbtasks
+                POSTGRES_PASSWORD: secret
+            options: >-
+                --health-cmd pg_isready
+                --health-interval 10s
+                --health-timeout 5s
+                --health-retries 5
+            ports:
+                - 5432:5432
         strategy:
             matrix:
                 django-version: ["6.0"]
@@ -30,3 +43,8 @@ jobs:
               uses: astral-sh/setup-uv@v7
             - name: Run Tests (SQLite)
               run: uv run --with "django~=${{ matrix.django-version }}" manage.py test
+            - name: Run Tests (PostgreSQL)
+              run: uv run --with "django~=${{ matrix.django-version }}" manage.py test
+              env:
+                  TEST_ENGINE: postgres
+                  POSTGRES_PASSWORD: secret
