--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = []
 [dependency-groups]
 dev = [
     "django>=6.0",
+    "mysql-connector-python>=9.5.0",
     "psycopg>=3.3.2",
 ]
 
