--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ classifiers = [
 ]
 dependencies = []
 
+[project.optional-dependencies]
+serve = [
+    "granian[reload]>=2.4.2",
+]
+
 [dependency-groups]
 dev = [
     "django>=6.0",
